# ne-spectrum

./: LICENSE  README.md  env.yml  pyproject.toml  slider.py  spectra.py  test.py
src/ne_spectrum/: __init__.py  spectra.py
